--- a/index.html
+++ b/index.html
@@ -5,15 +5,231 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Employee</title>
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-  <link rel="stylesheet" href="css/col.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
+  <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
 
+  <section>
+    <div class="d-flex ">
+      <div class="left-box">
+      </div>
+
+      <div class="w-100">
+        <div class="header p-4 d-flex align-items-center justify-content-between">
+          <div>
+            <i class='bx me-2 fs-5 bx-search-alt-2'></i>
+            <input class="header__input" type="text" name="search" placeholder="Search topics">
+          </div>
+
+          <div class="nav">
+            <button type="button" class="position-relative me-4">
+              <i class='bx nav__icon bx-bell'></i>
+              <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                4
+                <span class="visually-hidden">unread messages</span>
+              </span>
+            </button>
+
+            <button type="button" class="position-relative me-4">
+              <i class='bx nav__icon bx-message-square'></i>
+              <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill">
+                3
+                <span class="visually-hidden">unread messages</span>
+              </span>
+            </button>
+            <button><i class='bx nav__icon bx-power-off'></i></button>
+          </div>
+        </div>
+
+        <div class="d-flex user p-5 ">
+          <span class="user__part me-5"><i class='bx fs-3 bxs-user'></i></span>
+          <div>
+            <h3 class="m-0 fs-5 mb-1">New Employee</h3>
+            <p class="m-0 text-gray">Form design with validation</p>
+          </div>
+        </div>
+
+        <div class="cards-wrapper cards p-5">
+          <div class="cards__inner">
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="cards__input">
+                <i class='bx me-2 cards__icon fs-5 bx-search-alt-2'></i>
+                <input class="cards__search" type="text" name="search-employee" id="SearchInput">
+                <span class="cards__info">Search Employees</span>
+              </div>
+
+              <button class="cards__btn d-flex align-items-center" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                id="addBtn">
+                <i class='bx me-2 fs-4 bx-plus'></i>
+                Add New
+              </button>
+
+              <!-- Modal -->
+
+              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">Employee Form</h5>
+                      <button type="button" class="btn-close btn-danger" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <div>
+                        <form class="d-flex form">
+                          <div class="left-modal">
+                            <div class="inputs-wrapper">
+
+                              <input class="modal__input" type="text" name="Fullname" placeholder="Full Name"
+                                id="NameInput" required>
+                              <input class="modal__input" type="text" name="Email" placeholder="Email" id="EmailInput"
+                                required>
+                              <input class="modal__input" type="number" name="Mobile" placeholder="Mobile"
+                                id="MobileInput" required>
+                            </div>
+                          </div>
+
+                          <div class="ps-5">
+                            <label for="gender">Gender</label><br>
+                            <div class="d-flex mt-2 mb-3">
+                              <div class="form-check me-3">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                  id="flexRadioDefault1" checked>
+                                <label class="form-check-label" for="flexRadioDefault1">
+                                  Male
+                                </label>
+                              </div>
+                              <div class="form-check">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                  id="flexRadioDefault2">
+                                <label class="form-check-label" for="flexRadioDefault2">
+                                  Female
+                                </label>
+                              </div>
+                            </div>
+
+                            <input list="data" class="modal__input" placeholder="Departure" id="DepartInput" required>
+                            <datalist id="data">
+                              <option value="Development">
+                              <option value="Marketing">
+                              <option value="Accounting">
+                              <option value="Hr">
+                            </datalist>
+
+                            <input type="date" class="modal__input">
+
+                            <div>
+                              <button type="submit" class="btn submit-btn me-2">Submit</button>
+                              <button type="submit" class="btn reset-btn">Reset</button>
+                            </div>
+                          </div>
+                        </form>
+                      </div>
+                    </div>
+                    <div class="modal-footer">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <table class="table list-unstyled mt-4">
+              <thead>
+                <tr>
+                  <th class="table__head">Employee Name</th>
+                  <th class="table__head">Email Address (Personal)</th>
+                  <th class="table__head">Mobile Number</th>
+                  <th class="table__head">Department</th>
+                  <th class="table__head">Actions</th>
+                </tr>
+              </thead>
+              <tbody class="table__output"></tbody>
+            </table>
+
+
+            <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel2"
+              aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Employee Form</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <div>
+                      <form class="d-flex form-second">
+                        <div class="left-modal">
+                          <div class="inputs-wrapper">
+                            <input class="modal__input" type="text" name="Fullname" placeholder="Full Name"
+                              id="NameInput2" required>
+                            <input class="modal__input" type="text" name="Email" placeholder="Email" id="EmailInput2"
+                              required>
+                            <input class="modal__input" type="number" name="Mobile" placeholder="Mobile"
+                              id="MobileInput2" required>
+                          </div>
+                        </div>
+
+                        <div class="ps-5">
+                          <label for="gender">Gender</label><br>
+                          <div class="d-flex mt-2 mb-3">
+                            <div class="form-check me-3">
+                              <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                id="flexRadioDefault1" checked>
+                              <label class="form-check-label" for="flexRadioDefault">
+                                Male
+                              </label>
+                            </div>
+                            <div class="form-check">
+                              <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                id="flexRadioDefault2">
+                              <label class="form-check-label" for="flexRadioDefault2">
+                                Female
+                              </label>
+                            </div>
+                          </div>
+
+                          <input list="data" class="modal__input" placeholder="Departure" id="DepartInput2" required>
+                          <datalist id="data">
+                            <option value="Development">
+                            <option value="Marketing">
+                            <option value="Accounting">
+                            <option value="Hr">
+                          </datalist>
+
+                          <input type="date" class="modal__input">
+                          <div>
+                            <button type="submit" class="btn submit-btn me-2">Submit</button>
+                            <button type="submit" class="btn reset-btn">Reset</button>
+                          </div>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+  </section>
+
+
+
   <script src="js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
