--- a/index.html
+++ b/index.html
@@ -143,14 +143,15 @@
             <table class="table list-unstyled mt-4">
               <thead>
                 <tr>
-                  <th class="table__head">Employee Name</th>
-                  <th class="table__head">Email Address (Personal)</th>
-                  <th class="table__head">Mobile Number</th>
-                  <th class="table__head">Department</th>
-                  <th class="table__head">Actions</th>
+                  <th class="table__head"><button class="table__button">Employee Name</button> </th>
+                  <th class="table__head"><button class="table__button"> Email Address (Personal)</button></th>
+                  <th class="table__head"><button class="table__button">Mobile Number</button> </th>
+                  <th class="table__head"><button class="table__button">Department</button> </th>
+                  <th class="table__head"><button class="table__button">Actions</button> </th>
                 </tr>
               </thead>
-              <tbody class="table__output"></tbody>
+              <tbody class="table__output">
+              </tbody>
             </table>
 
 
